# Arabic_Text_Summarization

./: Arabic_Summarizer.ipynb  DataSet Link.txt  Dataset Link.md  Presentation.pptx  README.md  finetuned model link  finetuned model link.md
FastAPI/: main.py  pyproject.toml
ReactJS/src/: App.css  App.jsx  index.css  index.html  main.jsx
ReactJS/src/components/: About.jsx  Footer.jsx  History.jsx  Summarizer.jsx  landing.jsx
ReactJS/src/styles/: style.css
